--- a/GymnasticsStudioClient/src/app/Components/student-pay-details/student-pay-details.component.html
+++ b/GymnasticsStudioClient/src/app/Components/student-pay-details/student-pay-details.component.html
@@ -53,9 +53,9 @@
 :עבור  
 </h3>
 
-    <mat-list-item role="listitem" *ngFor="let studentInSubscriptionName of StudentInSubscriptionNamesListByStudentId[i]">
+    <!-- <mat-list-item role="listitem" *ngFor="let studentInSubscriptionName of StudentInSubscriptionNamesListByStudentId[i]">
            {{studentInSubscriptionName}} 
-    </mat-list-item>
+    </mat-list-item> -->
     
       </mat-list>
     </cdk-virtual-scroll-viewport>
