--- a/GymnasticsStudioClient/src/app/Components/edit-student-details/edit-student-details.component.css
+++ b/GymnasticsStudioClient/src/app/Components/edit-student-details/edit-student-details.component.css
@@ -2,16 +2,17 @@
     position: absolute;
    text-align: center;
     top: 20%;
-    left: 10%;
+    left: 20%;
     height: 70%;
-    width: 30%;
+    width: 60%;
 }
 .mat-form-field{
 
     display: inline-block;
-   
-    
+    flex-direction: column;
+    align-items: flex-start;
     left:5%;
     width: 80%;
     
     }
+    
