--- a/GymnasticsStudioClient/src/app/Components/students-list/students-list.component.css
+++ b/GymnasticsStudioClient/src/app/Components/students-list/students-list.component.css
@@ -9,8 +9,8 @@ height: 100%;
 .mat-card{
     display:flex;
     top: 10%;
-    left: 50%;
-    height: 85%;
+    right: 15%;
+    height: 80%;
     width: 30%;
 }
 .mat-card-content
@@ -25,7 +25,7 @@ height: 100%;
     border: 1px solid black;
     display: inline-block;
     top: 5px;
-    left: 5px;
+    right: 5px;
     height: 90%;
     width: 95%;
     overflow-y: scroll;
@@ -44,7 +44,7 @@ height: 100%;
     background-color:  crimson;
 }
 .table-item{
-    left: 0%;;
+   
     height: 50px;
     width: 50%;
   
@@ -73,6 +73,17 @@ height: 100%;
   {
     width:17% !important;
     top:0%;
+    right: 0%;
     margin-left: 8px;
 
+  }
+
+  .search-box
+  {
+    position: absolute;
+   
+    top: 9%;
+    right: 20%;
+    height: 5%;
+    width: 80%;
   }
