--- a/GymnasticsStudioClient/src/app/Components/student-scadul/student-scadul.component.html
+++ b/GymnasticsStudioClient/src/app/Components/student-scadul/student-scadul.component.html
@@ -20,7 +20,8 @@
    <tr>
       <button  mat-icon-button [matMenuTriggerFor]="Menu" class="cloneIcon" (click)="FullSubscriptionMenue()">
          שינוי מנוי </button>
-       
+      
+         
       
        <mat-menu #Menu="matMenu">
         <button mat-menu-item *ngFor="let subscription of SubscriptionList" (click)="EditSubscription(subscription)">{{subscription.Name}}</button>
@@ -28,14 +29,17 @@
         </mat-menu>  
    </tr>
    <tr>
-      <button  mat-icon-button [matMenuTriggerFor]="Menu2" class="cloneIcon" (click)="FullLessonMenue()">
+      <button  mat-icon-button [matMenuTriggerFor]="Menu2" class="cloneIcon" (click)="openDialog()">
          שינוי שיבוץ </button>
        
       
        <mat-menu #Menu2="matMenu">
-        <button mat-menu-item *ngFor="let lesson of LessonsList" (click)="EditLesson(lesson)">{{lesson.Name}} יום {{lesson.Day}} {{lesson.StartHower}}-{{lesson.FinishHower}}</button>
+        <button mat-menu-item *ngFor="let lesson of LessonsList; let i = index" (click)="EditLesson(lesson)">{{lesson.Name}} יום {{lesson.Day}} {{lesson.StartHower}}-{{lesson.FinishHower}} {{TeacherNameList[i]}}</button>
                                     
         </mat-menu>  
+   </tr>
+   <tr>
+     <p *ngIf="Date">{{Date}}</p>
    </tr>
      
     
