--- a/GymnasticsStudioClient/src/app/Components/date-dialog-box/date-dialog-box.component.html
+++ b/GymnasticsStudioClient/src/app/Components/date-dialog-box/date-dialog-box.component.html
@@ -9,5 +9,5 @@
 <div mat-dialog-actions>
  
   <button mat-button>ביטול</button>
-  <button mat-button [mat-dialog-close]="data.Date" cdkFocusInitial>Ok</button>
+  <button mat-button [mat-dialog-close]="data.Date" cdkFocusInitial>אישור</button>
 </div>
