--- a/GymnasticsStudioClient/src/app/Components/student-pay-details/student-pay-details.component.html
+++ b/GymnasticsStudioClient/src/app/Components/student-pay-details/student-pay-details.component.html
@@ -5,7 +5,7 @@
   </mat-card-header>
   <mat-card-content >
     <h1>
-      :מצב תשלום נוכחי
+      מצב תשלום נוכחי:
     </h1> <br> 
     <h2>
     {{state}} של {{Balance}} שקלים
