--- a/GymnasticsStudioClient/src/app/app.component.html
+++ b/GymnasticsStudioClient/src/app/app.component.html
@@ -41,7 +41,8 @@
                     <button mat-menu-item (click)="ShowStudentsList('גברים')">גברים</button>
                     <button mat-menu-item (click)="ShowStudentsList('נשים')">נשים</button>
                     <button mat-menu-item (click)="ShowStudentsList('נערות')">נערות</button>
-                    <button mat-menu-item (click)="ShowStudentsList('ילדים')">ילדים</button>                     
+                    <button mat-menu-item (click)="ShowStudentsList('ילדים')">ילדים</button>
+                    <button mat-menu-item (click)="ShowSubscriptionsOfStudentsDetails()">פרטי מנויי תלמידים</button>                     
                 </mat-menu>           
             </mat-tab>
 
