--- a/GymnasticsStudioClient/src/app/Components/students-files/students-files.component.html
+++ b/GymnasticsStudioClient/src/app/Components/students-files/students-files.component.html
@@ -2,13 +2,22 @@
 
  
   
-  <button type="button" mat-raised-button (click)="file.click()">Choose File</button>
+  <button type="button" mat-raised-button (click)="file.click()">בחר קובץ</button>
   <input hidden  value="" #file (change)="onFileChange($event)" type="file" id="file">
 
 
     <!-- <embed src="C:\Users\User\Desktop\Ester Levcovich\GymnasticsStudio\GymnasticsStudioClient\src\app\Fiels\מסכים לתכנות 28.2.21.pdf" 
     style="width: 100%;height: 500px" 
     type="application/pdf"> -->
+    <h2>רשימת המסמכים</h2>
+    <div *ngFor="let item of StudentDocs let i=index"  data-font-size="12" data-font-size-type="px" style="width: 50%;">
+      <div tabindex="0" data-font-size="12" data-font-size-type="px">
+        <div data-font-size="12" data-font-size-type="px">{{item.Name}}</div>
+        <a [href]="sanitizeImageUrl(item.Path)" download  target="_blank">
+          <button>{{item.Path}}</button>
+        </a>   
+      </div>
+    </div>
     <pdf-viewer [src]="pdfSource"
               [original-size]="false"
   ></pdf-viewer>
